feat(I.3.1): crochet-debug-d4j ergonomic helper + strict scoring polish
Reduces C3 setup friction from ~10 tool calls to ~2 by providing two
new shell/Python helpers under crochet-debug/scripts/:

crochet-debug-d4j annotate
  Injects @TimeTravelBody on a target method (regex-based source patch
  with import insertion), generates a RunUnderTtd.java wrapper that
  calls Ttd.sessionWithRepl(...) around a JUnitCore.run() invocation
  so agents never need to patch test or library sources, then rebuilds
  with defects4j compile.  --auto-detect mode runs the failing test,
  grabs the first non-JUnit stack frame, and selects class+method
  automatically.

crochet-debug-d4j run-test
  Discovers the Defects4J test classpath via `defects4j export -p
  cp.test`, compiles RunUnderTtd.java against it, constructs the
  full `-agentlib:jdwp=... --add-reads java.base=jdk.unsupported
  -javaagent:<crochet-agent.jar>` launch command for the instrumented
  JDK, and auto-connects the unified crochet-debug CLI on the agent's
  stdin/stdout.  --no-connect prints the connect command and leaves
  the target running, for two-terminal workflows.

crochet-debug (wrapper)
  Thin bash wrapper that hides `java --add-modules jdk.jdi -jar ...`
  so agents can write `crochet-debug --attach` instead of the full
  incantation.

Also: condition-C3.md prompt updated to describe the two-step workflow
(annotate + run-test) instead of the previous 6-step manual recipe.
Budget note added explaining that TTD automation leaves more tool calls
for actual debugging.

Scoring polish: the REGRESSED_TESTS JSON is now written to a temp file
before Python parses it, eliminating the triple-quote shell-embedding
that would break on test names containing apostrophes.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>